<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".presentation.views.newnote.AddNewNoteActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/constraint_new_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_default">



    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:textSize="@dimen/size_body"
                android:inputType="text|textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_title"
                android:fontFamily="sans-serif-light"
                android:hint="@string/label_title_note"
                android:textColorHint="@color/ColorBackgroundMain"
                android:padding="@dimen/min_margin"/>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_title"
                android:layout_marginTop="@dimen/margin_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="@dimen/size_body"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/input_body"
                    android:textColorHint="@color/ColorBackgroundMain"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:hint="@string/label_input_here"
                    android:padding="@dimen/min_margin"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_marginTop="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_edit_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
             android:text="@string/label_priority"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/size_body"
        android:id="@+id/label_priority"/>


        <RadioGroup
                android:id="@+id/radio_group_priority"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_edit"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/label_priority">

            <RadioButton
                    android:id="@+id/prio_1"
                    android:padding="@dimen/min_margin"
                    android:buttonTint="@android:color/holo_green_light"
                    android:textColor="@android:color/holo_green_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_1"/>

            <RadioButton
                    android:buttonTint="@android:color/holo_orange_light"
                    android:textColor="@android:color/holo_orange_light"
                    android:id="@+id/prio_2"
                    android:padding="@dimen/min_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_2"/>

            <RadioButton
                    android:buttonTint="@android:color/holo_red_dark"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/prio_3"
                    android:padding="@dimen/min_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_3"/>

        </RadioGroup>

        <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_update"
                app:layout_constraintTop_toBottomOf="@id/radio_group_priority"
                android:layout_marginTop="@dimen/margin_default"
                android:fontFamily="sans-serif-light"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/size_date"
                android:textStyle="italic"
                android:text="@string/last_update_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/constraint_layout"
            android:layout_margin="@dimen/margin_edit"
            android:id="@+id/btn_confirm_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_title"
            android:textColor="@drawable/selector_btn_add_note"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/selector_btn_add_note"
            android:text="@string/btn_confirm"
            android:padding="@dimen/margin_edit"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>